--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <i class="fab fa-github fa-2x"></i>
                     </a>
                 </p>
-                <a href="resume.pdf" download="Akash_Nale_Resume.pdf" class="btn btn-primary">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1UanJjpO2re8BhG0GoGd1aEXo-W_-TGZf/view?usp=sharing" download="Akash_Nale_Resume.pdf" class="btn btn-primary">Download Resume</a>
             </div>
         </div>
         
